[package]
name = "raoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.6"
base16ct = { version = "0.1.1", features = ["alloc"] }


